# livermore-tx

./: .env  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: deploy.cmake
doc/: about.txt
example/: CMakeLists.txt
example/src/: main.cpp
res/: config.ini  instruments.txt  livermore-tx_en_US.properties  livermore-tx_zh_CN.properties
src/: config.cpp  config.h  error.h  livermore_tx.cpp  livermore_tx.h  main.cpp  market_data.h  quote.cpp  quote.h  receiver.cpp  receiver.h  shm.h  util.cpp  util.h
